// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinner component should render 1`] = `
<div>
  <div
    class="ins-c-spinner"
    role="status"
  >
    <span
      class="pf-v6-u-screen-reader"
    >
      Loading...
    </span>
  </div>
</div>
`;

exports[`Spinner component should render center Spinner 1`] = `
<div>
  <div
    class="ins-c-spinner ins-m-center"
    role="status"
  >
    <span
      class="pf-v6-u-screen-reader"
    >
      Loading...
    </span>
  </div>
</div>
`;
